--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {
         "collapsed": true,
         "id": "qhvZxm9n-jmF"
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "id": "Rh4rp7_Z_i0q"
       },
@@ -431,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "5X6ABVhhLfNk"
       },
@@ -469,13 +469,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 8,
       "metadata": {
         "id": "qp2AhaTKkGxN",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8eeb27a6-b91f-4631-b1c7-6f39d2f8b566"
+        "outputId": "6510f9f3-4f0c-487b-ca8f-60d4cf03a3fe"
       },
       "outputs": [
         {
@@ -578,19 +578,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 21,
       "metadata": {
         "id": "lXXuUHUODbJL"
       },
       "outputs": [],
       "source": [
-        "class Train_Evaluate_Traditional():\n",
+        "class Traditional_Models():\n",
         "\n",
         "  def __init__(self,\n",
+        "               models,\n",
+        "               model_parameters,\n",
         "               predictions={},\n",
         "               results={}):\n",
-        "    self.predictions= predictions\n",
-        "    self.results= results\n",
+        "    self.models = models\n",
+        "    self.model_parameters = model_parameters\n",
+        "    self.predictions = predictions\n",
+        "    self.results = results\n",
         "\n",
         "  def __validation(self, X_train, y_train, validation_size=35):\n",
         "    _, X_validation, _, y_validation = train_test_split(X_train, y_train, test_size=validation_size, stratify=y_train)\n",
@@ -624,30 +628,91 @@
         "               X_test,\n",
         "               y_test,\n",
         "               class_weight,\n",
-        "               list_models,\n",
-        "               list_parameters,\n",
-        "               model_names,\n",
         "               validation_size=35,\n",
         "               number_features=64,\n",
         "               tuning_metric='f1_macro'):\n",
+        "    print('1) Reducing dimension of feature matrices')\n",
         "    X_train_flattened, X_test_flattened = self.__flatten(X_train), self.__flatten(X_test)\n",
-        "    X_train_flattened, X_test_flattened = self.__feature_selector(X_train, y_train, X_test, class_weight=class_weight, d=number_features)\n",
+        "    print('2) Feature selection')\n",
+        "    X_train_flattened, X_test_flattened = self.__feature_selector(X_train_flattened, y_train, X_test_flattened, class_weight=class_weight, d=number_features)\n",
+        "    print('3) Generating validation matrices for hyper-parameter tuning')\n",
         "    X_validation, y_validation = self.__validation(X_train_flattened, y_train, validation_size=validation_size)\n",
-        "    for i, model in enumerate(list_models):\n",
-        "      print(f'----------------- Working on {model_names[i]} -----------------')\n",
-        "      model = self.__parameter_tuning(model, list_parameters[i], X_validation, y_validation, scoring=tuning_metric)\n",
+        "    print('4) Train & Evaluation')\n",
+        "    for model_name, model in self.models.items():\n",
+        "      print(f'    ----------------- Working on {model_name} -----------------')\n",
+        "      model = self.__parameter_tuning(model, self.model_parameters[model_name], X_validation, y_validation, scoring=tuning_metric)\n",
         "      mdoel =  self.ــtrain_model(model, X_train_flattened, y_train)\n",
-        "      self.predictions[model_names[i]] = self.ــevaluate(model, X_test_flattened, y_test, title=model_names[i])\n"
+        "      self.predictions[model_name] = self.ــevaluate(model, X_test_flattened, y_test, title=model_name)\n",
+        "    return self.predictions, self.results"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "\n",
+        "model_parameters = {'Logestic_Regression':{'penalty':['l1', 'l2', 'elasticnet'], 'class_wight':class_weight},\n",
+        "                    'KNN':{'n_neighbors':[2,4,8,16], 'metric':['euclidean','cosine']},\n",
+        "                    'Random_Forest':{'criterion':{'gini', 'entropy', 'log_loss'}, 'class_wight':class_weight}\n",
+        "                    }\n",
+        "\n",
+        "\n",
+        "tradional_models = Traditional_Models(models = {'Logestic_Regression':LogisticRegression(), 'Random_Forest':RandomForestClassifier(), 'KNN':KNeighborsClassifier()},\n",
+        "                                      model_parameters = model_parameters)"
+      ],
       "metadata": {
         "id": "IGgWBPtvYrrf"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions, results = tradional_models.pipeline(X_train,\n",
+        "                                                 y_train,\n",
+        "                                                 X_test,\n",
+        "                                                 y_test,\n",
+        "                                                 class_weight)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 446
+        },
+        "id": "TRjn12NRwgUb",
+        "outputId": "525e7e78-4033-4482-e740-7bdc237bb0b5"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1) Reducing dimension of feature matrices\n",
+            "2) Feature selection\n",
+            "3) Generating validation matrices for hyper-parameter tuning\n",
+            "4) Train & Evaluation\n",
+            "    ----------------- Working on Logestic_Regression -----------------\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-23-4c8cd108a7c7>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m predictions, results = tradional_models.pipeline(X_train,\n\u001b[0m\u001b[1;32m      2\u001b[0m                                                  \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                                  \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                                                  \u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                                  class_weight)\n",
+            "\u001b[0;32m<ipython-input-21-965c15bce858>\u001b[0m in \u001b[0;36mpipeline\u001b[0;34m(self, X_train, y_train, X_test, y_test, class_weight, validation_size, number_features, tuning_metric)\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mmodel_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'    ----------------- Working on {model_name} -----------------'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m       \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__parameter_tuning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_parameters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_validation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_validation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtuning_metric\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m       \u001b[0mmdoel\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mــtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train_flattened\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mــevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test_flattened\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtitle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Traditional_Models' object has no attribute 'model_parameters'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -763,24 +828,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1QWU09sz7RAL",
-        "outputId": "4a860609-ab41-4f48-d6b1-afc881b10918"
+        "outputId": "490957ab-7d7e-4ad4-96a3-225866c4fb99"
       },
-      "execution_count": 9,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([1787, 1279, 1586,  182,  712,  448, 1522, 1274,  386,   97, 1660,\n",
-              "       1153, 1791, 1725,  444,  332,  471, 1322, 1579,  967,  540,  821,\n",
-              "       1582,  225,  979,  561, 1762, 1438,  520,  944, 1018, 1497,  269,\n",
-              "        601,   46, 1414,   78,  682,  697,  898, 1528,  172,   28, 1168,\n",
-              "       1612,  169,  309, 1783, 1603, 1685,  385, 1366, 1596,  337,  774,\n",
-              "        853,  358,  113, 1294, 1723, 1796,  137, 1798, 1717])"
+              "array([1279,  967,  471,  380,  182,  712, 1660,  448, 1153,  540,  444,\n",
+              "        232, 1720, 1791, 1522, 1438,   97, 1331, 1723, 1168,  113,  821,\n",
+              "       1717, 1596,  225, 1592,   28, 1414, 1685,  774, 1582, 1725, 1579,\n",
+              "        561,  172,  601,  979,  853,  697,  326, 1528, 1796, 1612,   78,\n",
+              "         46,  682,  520, 1783, 1762, 1018, 1603, 1497,  169,  385,  358,\n",
+              "        137,  337,  944, 1294, 1366,  309,  898, 1798,  269])"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 24
         }
       ]
     },
@@ -795,7 +860,28 @@
       "metadata": {
         "id": "HGqgqUJHBnqt"
       },
-      "execution_count": 10,
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "parameters = {'kernel':['linear'], 'C':[20, 10]}\n",
+        "svc = svm.SVC()\n",
+        "clf = GridSearchCV(svc, parameters)\n",
+        "clf.fit(iris.data, iris.target)\n",
+        "sorted(clf.cv_results_.keys())\n",
+        "clf.best_params_"
+      ],
+      "metadata": {
+        "id": "xoGZA58ureRm"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -864,32 +950,29 @@
       "cell_type": "code",
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
-        "clf = RandomForestClassifier(class_weight=class_weight).fit(temp_X_train, y_train)\n",
+        "clf = RandomForestClassifier().fit(temp_X_train, y_train)\n",
         "prediction3 = clf.predict(temp_X_test)\n",
         "print(classification_report(y_test, prediction3))"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 225
         },
         "id": "knRBVX8-_6m4",
-        "outputId": "8330e5ae-39fe-4b6f-a3ce-1ee69d600c2e"
+        "outputId": "f9b1a6ff-aa29-4201-9ea7-d8ede2aef3b0"
       },
-      "execution_count": 45,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.98      1.00      0.99     15665\n",
-            "           1       0.91      0.58      0.71       710\n",
-            "\n",
-            "    accuracy                           0.98     16375\n",
-            "   macro avg       0.95      0.79      0.85     16375\n",
-            "weighted avg       0.98      0.98      0.98     16375\n",
-            "\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-bfdd0198dc73>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_X_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprediction3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_X_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclassification_report\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprediction3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'temp_X_train' is not defined"
           ]
         }
       ]
@@ -930,7 +1013,17 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn import svm, datasets\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "parameters = {'kernel':['linear'], 'C':[20, 10]}\n",
+        "svc = svm.SVC(class_weight='balanced')\n",
+        "clf = GridSearchCV(svc, parameters)\n",
+        "clf.fit(temp_X_train, y_train)\n",
+        "sorted(clf.cv_results_.keys())\n",
+        "clf.best_params_"
+      ],
       "metadata": {
         "id": "pSLKBMTHJrXd"
       },
@@ -1257,7 +1350,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzjjBxNd5SCdhvHtP8OWz2",
+      "authorship_tag": "ABX9TyNxawC8gC2uSTGEiqcVjOJs",
       "include_colab_link": true
     },
     "kernelspec": {
