--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -578,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 32,
       "metadata": {
         "id": "lXXuUHUODbJL"
       },
@@ -611,7 +611,7 @@
         "  def __parameter_tuning(self, model, parameters, X_validation, y_validation, scoring='f1_macro'):\n",
         "    optimizer = GridSearchCV(estimator=model, param_grid=parameters, scoring=scoring)\n",
         "    optimizer.fit(X_validation, y_validation)\n",
-        "    return model.set_params(optimizer.best_params_)\n",
+        "    return model.set_params(**optimizer.best_params_)\n",
         "\n",
         "  def __train_model(self, model, X_train, y_train):\n",
         "    return model.fit(X_train, y_train)\n",
@@ -640,8 +640,9 @@
         "    print('4) Train & Evaluation')\n",
         "    for model_name, model in self.models.items():\n",
         "      print(f'    ----------------- Working on {model_name} -----------------')\n",
-        "      model = self.__parameter_tuning(model, self.model_parameters[model_name], X_validation, y_validation, scoring=tuning_metric)\n",
-        "      mdoel =  self.ــtrain_model(model, X_train_flattened, y_train)\n",
+        "      if model_name in self.model_parameters:\n",
+        "        model = self.__parameter_tuning(model, self.model_parameters[model_name], X_validation, y_validation, scoring=tuning_metric)\n",
+        "      mdoel =  self.__train_model(model, X_train_flattened, y_train)\n",
         "      self.predictions[model_name] = self.ــevaluate(model, X_test_flattened, y_test, title=model_name)\n",
         "    return self.predictions, self.results"
       ]
@@ -655,19 +656,20 @@
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "\n",
-        "model_parameters = {'Logestic_Regression':{'penalty':['l1', 'l2', 'elasticnet'], 'class_wight':class_weight},\n",
-        "                    'KNN':{'n_neighbors':[2,4,8,16], 'metric':['euclidean','cosine']},\n",
-        "                    'Random_Forest':{'criterion':{'gini', 'entropy', 'log_loss'}, 'class_wight':class_weight}\n",
+        "model_parameters = {'KNN':{'n_neighbors':[2,4,8,16], 'metric':['euclidean','cosine']},\n",
+        "                    'Random_Forest':{'criterion':{'gini', 'entropy', 'log_loss'}}\n",
         "                    }\n",
         "\n",
         "\n",
-        "tradional_models = Traditional_Models(models = {'Logestic_Regression':LogisticRegression(), 'Random_Forest':RandomForestClassifier(), 'KNN':KNeighborsClassifier()},\n",
+        "tradional_models = Traditional_Models(models = {'Logestic_Regression':LogisticRegression(class_weight=class_weight),\n",
+        "                                                'Random_Forest':RandomForestClassifier(class_weight=class_weight),\n",
+        "                                                'KNN':KNeighborsClassifier()},\n",
         "                                      model_parameters = model_parameters)"
       ],
       "metadata": {
         "id": "IGgWBPtvYrrf"
       },
-      "execution_count": 22,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -685,9 +687,9 @@
           "height": 446
         },
         "id": "TRjn12NRwgUb",
-        "outputId": "525e7e78-4033-4482-e740-7bdc237bb0b5"
+        "outputId": "99d1485d-603d-4c52-f05e-c465ed13e4ec"
       },
-      "execution_count": 23,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,9 +709,9 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-23-4c8cd108a7c7>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m predictions, results = tradional_models.pipeline(X_train,\n\u001b[0m\u001b[1;32m      2\u001b[0m                                                  \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                                  \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                                                  \u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                                  class_weight)\n",
-            "\u001b[0;32m<ipython-input-21-965c15bce858>\u001b[0m in \u001b[0;36mpipeline\u001b[0;34m(self, X_train, y_train, X_test, y_test, class_weight, validation_size, number_features, tuning_metric)\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mmodel_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'    ----------------- Working on {model_name} -----------------'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m       \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__parameter_tuning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_parameters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_validation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_validation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtuning_metric\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m       \u001b[0mmdoel\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mــtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train_flattened\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mــevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test_flattened\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtitle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'Traditional_Models' object has no attribute 'model_parameters'"
+            "\u001b[0;32m<ipython-input-34-4c8cd108a7c7>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m predictions, results = tradional_models.pipeline(X_train,\n\u001b[0m\u001b[1;32m      2\u001b[0m                                                  \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                                  \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                                                  \u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                                  class_weight)\n",
+            "\u001b[0;32m<ipython-input-32-6548191afe85>\u001b[0m in \u001b[0;36mpipeline\u001b[0;34m(self, X_train, y_train, X_test, y_test, class_weight, validation_size, number_features, tuning_metric)\u001b[0m\n\u001b[1;32m     57\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mmodel_name\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_parameters\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__parameter_tuning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_parameters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_validation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_validation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscoring\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtuning_metric\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m       \u001b[0mmdoel\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mــtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train_flattened\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mــevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test_flattened\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtitle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Traditional_Models' object has no attribute 'ــtrain_model'"
           ]
         }
       ]
@@ -1350,7 +1352,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxawC8gC2uSTGEiqcVjOJs",
+      "authorship_tag": "ABX9TyN9d3QHWDYVHyLpE1+wR2sg",
       "include_colab_link": true
     },
     "kernelspec": {
